syntax = "proto3";
package contrib.nft.v1beta1;

import "contrib/nft/v1beta1/nft.proto";

option go_package = "cosmossdk.io/contrib/x/nft";

// GenesisState defines the nft module's genesis state.
message GenesisState {
  // class defines the class of the nft type.
  repeated contrib.nft.v1beta1.Class classes = 1;

  // entry defines all nft owned by a person.
  repeated Entry entries = 2;
}

// Entry Defines all nft owned by a person
message Entry {
  // owner is the owner address of the following nft
  string owner = 1;

  // nfts is a group of nfts of the same owner
  repeated contrib.nft.v1beta1.NFT nfts = 2;
}
